--- a/package.json
+++ b/package.json
@@ -42,5 +42,12 @@
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
+  },
+  "packageManager": "bun@1.2.13",
+  "engines": {
+    "node": "^22.14.0"
+  },
+  "author": {
+    "name": "luzilong"
   }
 }
